--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,7 +1,10 @@
+
+$primary: #ce0f28e8;
+
+
+@import '../node_modules/mapbox-gl/src/css/mapbox-gl.css';
 // --------------------
 // Definition of variables
-$primary: #32c3ff;
-
 
 // ----------------------------------------
 // To install Boostrap:
@@ -50,8 +53,10 @@ body {
 
   .App-header {
     background-color: $primary;
-    padding: 20px;
+    padding: 10px;
     color: white;
+    display:flex;
+    align-items: center;
 
     a {
       color: white;
@@ -66,6 +71,8 @@ body {
 
   .App-title {
     font-size: 1.5em;
+    flex-grow:1;
+    text-align:left;
   }
 
   .App-intro {
@@ -97,5 +104,48 @@ body {
   .result {
     font-size: 1.2em;
     color: $primary;
+  }
+}
+
+.List{
+  Table{
+    margin: 0 auto;
+    width:60%;
+  }
+
+  img{
+    width:80px;
+  }
+
+  tbody > tr > td{
+    vertical-align: middle;
+  }
+  
+  // .row-container{
+  //   // display:flex;
+  //   // align-items: center;
+  //   border:4px solid yellow;
+  // }
+}
+.StreetArtDetails{
+  width:100%;
+  
+  img{
+    width:25%}
+  
+  .Map{
+    width:90%;
+    text-align: left;
+    margin: 0 auto;
+    margin-bottom:5%;
+  }
+
+}
+
+.NewStreetArt{
+  Form {
+    width:60%;
+    margin:10% auto;
+
   }
 }
